@@ -1,3 +1,10 @@
+2014-08-19  Ramon Casero  <rcasero@gmail.com>
+
+	* Add matlab/FiltersToolbox/elastix_write_param2file.m: (0.1.0)
+
+	- elastix_write_param2file Write struct with elastix parameters to
+	file.
+
 2014-08-15  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/CardiacToolbox/blockface_find_frame_shifts.m: (0.3.0)
